examples/vectors/expected/1505-vectors-zero-lane-rejected.stderr
error: Vector lane count must be a positive compile-time integer constant
  --> examples/vectors/1505-vectors-zero-lane-rejected.sx:13:16
   |
13 |     v : Vector(0, f32) = ---;
   |                ^
